sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:14: error: ';' expected but 'else' found.
     else if(i-j==0){
     ^AlgInsertionSort:22: error: Unmatched closing brace '}' ignored here
}
^